# bazel-diff-gha-error

./: .bazelrc  README.md  WORKSPACE.bazel
.github/workflows/: deploy.yml
