workspace(
    name = "example",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

## buildbuddy toolchains

buildbuddy_version = "829c8a574f706de5c96c54ca310f139f4acda7dd"

http_archive(
    name = "io_buildbuddy_buildbuddy_toolchain",
    sha256 = "a2a5cccec251211e2221b1587af2ce43c36d32a42f5d881737db3b546a536510",
    strip_prefix = "buildbuddy-toolchain-{version}".format(version = buildbuddy_version),
    urls = ["https://github.com/buildbuddy-io/buildbuddy-toolchain/archive/{version}.tar.gz".format(version = buildbuddy_version)],
)

load("@io_buildbuddy_buildbuddy_toolchain//:deps.bzl", "buildbuddy_deps")

buildbuddy_deps()

load("@io_buildbuddy_buildbuddy_toolchain//:rules.bzl", "buildbuddy")

buildbuddy(name = "buildbuddy_toolchain")

## bazel-diff

bazel_diff_version = "4.0.5"

http_archive(
    name = "bazel_diff",
    sha256 = "5c9df048b14bb1860e9da66ff8ce8201a3e5094f5118788505af77a0d0b422a6",
    strip_prefix = "bazel-diff-{version}".format(version = bazel_diff_version),
    urls = ["https://github.com/Tinder/bazel-diff/archive/{version}.tar.gz".format(version = bazel_diff_version)],
)

load("@bazel_diff//:repositories.bzl", "bazel_diff_dependencies")

bazel_diff_dependencies()

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies", "rules_proto_toolchains")

rules_proto_dependencies()

rules_proto_toolchains()

load("@io_bazel_rules_kotlin//kotlin:repositories.bzl", "kotlin_repositories")

kotlin_repositories()

load("@io_bazel_rules_kotlin//kotlin:core.bzl", "kt_register_toolchains")

kt_register_toolchains()

load("@rules_jvm_external//:defs.bzl", "maven_install")
load("@bazel_diff//:artifacts.bzl", "BAZEL_DIFF_MAVEN_ARTIFACTS")

maven_install(
    name = "bazel_diff_maven",
    artifacts = BAZEL_DIFF_MAVEN_ARTIFACTS,
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
